# minimacy

./: .gitignore  README.md  iconMaker.mcy  topLevel.mcy
android/: dummyKeyStore.jks
android/minimacy/: build.gradle  gradle.properties
android/minimacy/app/: build.gradle
android/minimacy/app/src/main/cpp/: CMakeLists.txt  system_ui_android.c
android/minimacy/gradle/wrapper/: gradle-wrapper.properties
ios/minimacy/minimacy/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m  system_ble.m  system_location.h  system_location.m  system_ui_ios.h  system_ui_ios.m
ios/minimacy/minimacy.xcodeproj/: project.pbxproj
macos/cmdline/: makefile
macos/cocoaGL/minimacy/: AppDelegate.h  AppDelegate.m  Info.plist  main.m  minimacy.entitlements  system_ble.h  system_ble.m  system_location.m  system_ui_cocoa.h  system_ui_cocoa.m
macos/cocoaGL/minimacy.xcodeproj/: project.pbxproj
misc/notepad++/: minimacyForNotepad++.xml
misc/vi_extension/: .vimrc  Readme
misc/visualstudio_extension/: HOWTO.txt
misc/vs2019_extension/minimacy/: Grammars.pkgdef  HOWTO.txt  minimacy.csproj  minimacy.sln  source.extension.vsixmanifest
misc/vscode_extension/minimacy/: CHANGELOG.md  HOWTO.txt  README.md  minimacy-0.0.1.vsix  package.json  vsc-extension-quickstart.md
programs/: boot.mcy
programs/demo/: demo.2d.qrcode.mcy  demo.2d.triangulation.mcy  demo.fun.boing.mcy  demo.fun.mandelbrot.mcy  demo.fun.maze.mcy  demo.fun.queens.mcy  demo.fun.tetris.mcy
rom/bios/: bios._admin.mcy  bios._console.mcy  bios._date.mcy  bios._file.mcy  bios._io.mcy  bios._keyboard.mcy  bios._lock.mcy  bios._net.mcy  bios._pkg.mcy  bios._scheduler.mcy  bios._start.mcy  bios._thread.mcy  bios._timer.mcy  bios._ui.mcy  bios._util.mcy  bios._worker.mcy  bios.admin.mcy  bios.date.mcy  bios.file.mcy  bios.keyboard.mcy  bios.lock.mcy  bios.mcy  bios.net.mcy  bios.pkg.mcy  bios.scheduler.mcy  bios.start.mcy  bios.thread.mcy  bios.timer.mcy  bios.ui.mcy  bios.util.mcy  bios.worker.mcy
rom/core/: core.2d.bmp.mcy  core.2d.font.maker.mcy  core.2d.font.mcy  core.2d.font.ttf.mcy  core.2d.font.ttf.parser.mcy  core.2d.gif.maker.mcy  core.2d.gif.mcy  core.2d.gl.mcy  core.2d.jpg.maker.mcy  core.2d.jpg.mcy  core.2d.png.maker.mcy  core.2d.png.mcy  core.2d.polygon.mcy  core.2d.qrcode.mcy  core.2d.quantization.mcy  core.3d.gl.mcy  core.console.mcy  core.crypto.aes.mcy  core.crypto.asn1.mcy  core.crypto.block.mcy  core.crypto.cer.maker.mcy  core.crypto.cer.mcy  core.crypto.csr.mcy  core.crypto.curve25519.mcy  core.crypto.des.mcy  core.crypto.ec.mcy  core.crypto.ed25519.mcy  core.crypto.hash.mcy  core.crypto.key.mcy  core.crypto.oaep.mcy  core.crypto.oid.mcy  core.crypto.pem.mcy  core.crypto.pkcs1.mcy  core.crypto.primal.mcy  core.crypto.rsa.mcy  core.crypto.rsapss.mcy  core.crypto.shamir.mcy  core.crypto.sign.mcy  core.crypto.signFile.mcy  core.crypto.x25519.mcy  (+49 more)
src/: compiler.c  compiler.h  compiler_call.c  compiler_globals.c  compiler_globals.h  compiler_instances.c  compiler_letgetset.c  compiler_locals.c  compiler_locals.h  compiler_loops.c  compiler_match.c  compiler_parser.c  compiler_parser.h  compiler_prog.c  compiler_step1.c  compiler_step2.c  compiler_step3.c  compiler_step4.c  compiler_struct.c  compiler_sum.c  compiler_term.c  compiler_try.c  crypto_adler32.c  crypto_adler32.h  crypto_aes.c  crypto_aes.h  crypto_checksum.c  crypto_checksum.h  crypto_crc32.c  crypto_crc32.h  crypto_des.c  crypto_des.h  crypto_hash.c  crypto_hash.h  crypto_md5.c  crypto_md5.h  crypto_rc4.c  crypto_rc4.h  crypto_sha1.c  crypto_sha1.h  (+84 more)
src/libs/jpg/: jcapimin.c  jdapimin.c  jdatadst.c  jdatasrc.c  jmemmgr.c  jmemnobs.c  jmorecfg.h  jpeglib.h  makefile  mjpeg.c
src/libs/png/: makefile  mpng.c  png.h  pngconf.h  pngrutil.c
src/libs/zlib/: deflate.c  makefile  mgzip.c
system/: boot.mcy
system/demo/: demo.2d.triangulation.mcy  demo.fun.boing.mcy  demo.fun.mandelbrot.mcy  demo.fun.maze.mcy  demo.fun.queens.mcy  demo.fun.tetris.mcy  demo.qrcode.mcy  demo.ui.cube.mcy
unix/: makefile
windows/minimacy/: minimacy.sln  minimacy.vcxproj  minimacy.vcxproj.filters  resource.h  wincmd.c
windows/visual2019/: minimacy.vcxproj  minimacy.vcxproj.filters
windows/visual2022/: minimacy.sln  minimacy.vcxproj  minimacy.vcxproj.filters  resource.h  wincmd.c
windows/visual2026/: minimacy.rc  minimacy.vcxproj  minimacy.vcxproj.filters
(+15 files in other folders)
